Bug 100180 - UI - SIDEBAR Chart Sidebar broken. Displays status but cannot Edit.
Summary: UI - SIDEBAR Chart Sidebar broken. Displays status but cannot Edit.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha1
Hardware: All All
: high major
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:5.3.0 target:5.2.4
Keywords: bibisected, bisected, regression
: 101402 (view as bug list)
Depends on:
Blocks: Chart-Sidebar
  Show dependency treegraph
 
Reported: 2016-06-01 20:04 UTC by Alex
Modified: 2022-06-16 05:58 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2016-06-01 20:04:32 UTC
Unresponsive sidebar in calc when editing charts in 5.2 beta.

1. Open calc - enter 1,2,3 and 11,12,13 into the first three rows of the first two columns.
2.Highlight this 3x2 grid and create a chart (any).
3.Double-click on the chart to go into edit mode.
4. My sidebar now says "Properties for the task are unavailable...." but we'll carry on.
5. Click on a data series and then try and change properties - e.g. change the series colour fill or add in a title.

Expected outcome:
That you can perform the task - e.g. changing fill colour

Actual Outcome:
It thinks you're clicking and dragging on the properties bar and nothing changes. If you drag it far enough the window pops out.

For the record:
If you change the properties using the dialogue box that appears if you double click, the sidebar updates with the new change. But you still cannot click anything!

Also I can use the sidebar for changing the formatting cells normally. Just not when you have double clicked to go into the chart editing mode.

I can provide any help necessary if you need more info, just comment on the bug.

Kind regards,
A
Comment 1 Cor Nouws 2016-06-02 11:17:20 UTC
I confirm the issue Alex.
Thanks for reporting.

It's my guess that this is some unfinished piece of work, that give the idea that we can edit, but we can't. Not yet..
Comment 2 Luke 2016-06-07 16:16:28 UTC
This is not Linux specif nor Calc specif. I can reproduce this with Writer under Windows. Regression window  f01bac5cc2b54b6df731b45c46187fec12515b46..00cf864e5d317016d7224c199aa982d07bd70113

Cor,
When you confirm regressions, please tag them as such with the regression keyword.
Comment 3 Cor Nouws 2016-06-07 16:40:15 UTC
(In reply to Luke from comment #2)

Thanks for correcting :)

> When you confirm regressions, please tag them as such with the regression
> keyword.

Hey ho - look for my bugzilla-record please :)
But obvious apologies that I missed this one. I wrongly assumed that it was new work.
Comment 4 raal 2016-06-08 16:07:06 UTC
This seems to have begun at the below commit.
Adding Cc: to Rishabh ; Could you possibly take a look at this one? Thanks
 9cf6811d2cfa0d13c6a744b0d92def40e42cfab0 is the first bad commit
commit 9cf6811d2cfa0d13c6a744b0d92def40e42cfab0
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Mon Feb 22 00:52:56 2016 -0800

    source aa0f47aa65693a9763ac0ebeed85c09ac2076431

	author	Rishabh <kris.kr296@gmail.com>	2016-02-17 08:32:30 (GMT)
committer	Katarina Behrens <Katarina.Behrens@cib.de>	2016-02-17 13:03:52 (GMT)
commit aa0f47aa65693a9763ac0ebeed85c09ac2076431 (patch)
tree 342b73e2c2ef3f50f9508e06fb92e0f4be88f1f1
parent 681294d55b6b4edcdef08982596cb4bcee32e635 (diff)
tdf#97924: Transparency slider causes entire sidebar to constantly refresh
Comment 5 Luke 2016-06-12 17:44:00 UTC
I can confirm reverting aa0f47aa65693a9763ac0ebeed85c09ac2076431, makes the chart sidebar function again. 

Rishabh or Katarina,
Could you please take a look at this regression?
Comment 6 Luke 2016-10-03 18:48:51 UTC
Rishabh or Katarina,
Can you please look into this regression? It's a serious usability issue for those of us that use the sidebar by default. If you need help understanding the interaction between your code and the chart sidebar code perhaps you should ask Markus about it.
Comment 7 Yousuf Philips (jay) (retired) 2016-10-04 01:47:42 UTC
Seems the same as my bug - bug 101402.
Comment 8 Katarina Behrens (Inactive) 2016-10-04 07:52:40 UTC
> Can you please look into this regression? It's a serious usability issue for
> those of us that use the sidebar by default. If you need help understanding
> the interaction between your code and the chart sidebar code perhaps you
> should ask Markus about it.

Rishabh is not hacking on Libreoffice anymore

I suffer from severe burn-out and I don't fix Libreoffice bugs either. Please find someone else
Comment 9 Commit Notification 2016-10-17 06:48:13 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1896a09cd831904099df5202bb4d22ec0ddbcb0c

tdf#100180: Band-aid fix for non-editable chart sidebar

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Katarina Behrens (Inactive) 2016-10-17 07:19:35 UTC
Can some1 pls verify the above patch really fixes the bug ... thanks
Comment 11 Cor Nouws 2016-10-18 09:24:30 UTC
(In reply to Alex from comment #0)

> Expected outcome:
> That you can perform the task - e.g. changing fill colour

Works in Version: 5.3.0.0.alpha0+
Build ID: e64ea98801d20e5024da900a0ac8faaf565f4bf3
CPU Threads: 4; OS Version: Linux 4.4; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-10-18_04:29:35
Locale: nl-NL (nl_NL.UTF-8); Calc: group


(In reply to Katarina Behrens (CIB) from comment #10)
> Can some1 pls verify the above patch really fixes the bug ... thanks


Done. Thanks!
obvious question: pls backport
Comment 12 Katarina Behrens (Inactive) 2016-10-18 10:25:13 UTC
Cherry-picked for 5.2, untested though, so a small regression can in theory creep in, but I'd say a few cropped controls are clearly a smaller annoyance than entirely defunct sidebar
Comment 13 Commit Notification 2016-10-18 13:30:59 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=171edd9af0a99c76a65b1ab05858bc3a2e298b51&h=libreoffice-5-2

tdf#100180: Band-aid fix for non-editable chart sidebar

It will be available in 5.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Buovjaga 2016-11-03 14:56:56 UTC
*** Bug 101402 has been marked as a duplicate of this bug. ***
Comment 15 Yousuf Philips (jay) (retired) 2016-11-03 15:32:00 UTC
Confirmed my bug 101402 is also fixed.

Version: 5.3.0.0.alpha1+
Build ID: 5d39c2013374727b1c8f147b8b99d54402a7ff02
CPU Threads: 2; OS Version: Linux 3.19; UI Render: default; VCL: gtk2; Layout Engine: old; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-11-02_00:55:24
Locale: en-US (en_US.UTF-8); Calc: group