tdf#100180: Band-aid fix for non-editable chart sidebar

no way should sfx2 sidebar controller be used in a base class, it
just wreaks havoc in chart which inherits from this class, but
uses its own controller.

Since those NotifyResize calls were introduced to prevent cropped
widgets on switching between different shape fills, try to make up
for that with other means in .ui file

Change-Id: I5a40e4d413b583b1de1e3f751493d65d41ff8465